--- a/src/main/asciidoc/reference/mongo-auditing.adoc
+++ b/src/main/asciidoc/reference/mongo-auditing.adoc
@@ -1,9 +1,9 @@
 [[mongo.auditing]]
-== General auditing configuration
+== General Auditing Configuration for MongoDB
 
-Activating auditing functionality is just a matter of adding the Spring Data Mongo `auditing` namespace element to your configuration:
+To activate auditing functionality, add the Spring Data Mongo `auditing` namespace element to your configuration, as the following example shows:
 
-.Activating auditing using XML configuration
+.Activating auditing by using XML configuration
 ====
 [source,xml]
 ----
@@ -11,7 +11,7 @@ Activating auditing functionality is just a matter of adding the Spring Data Mon
 ----
 ====
 
-Since Spring Data MongoDB 1.4 auditing can be enabled by annotating a configuration class with the `@EnableMongoAuditing` annotation.
+Since Spring Data MongoDB 1.4, auditing can be enabled by annotating a configuration class with the `@EnableMongoAuditing` annotation, as the followign example shows:
 
 .Activating auditing using JavaConfig
 ====
@@ -29,5 +29,4 @@ class Config {
 ----
 ====
 
-If you expose a bean of type `AuditorAware` to the `ApplicationContext`, the auditing infrastructure will pick it up automatically and use it to determine the current user to be set on domain types. If you have multiple implementations registered in the `ApplicationContext`, you can select the one to be used by explicitly setting the `auditorAwareRef` attribute of `@EnableMongoAuditing`.
-
+If you expose a bean of type `AuditorAware` to the `ApplicationContext`, the auditing infrastructure picks it up automatically and uses it to determine the current user to be set on domain types. If you have multiple implementations registered in the `ApplicationContext`, you can select the one to be used by explicitly setting the `auditorAwareRef` attribute of `@EnableMongoAuditing`.
