--- a/src/main/asciidoc/reference/cross-store.adoc
+++ b/src/main/asciidoc/reference/cross-store.adoc
@@ -1,16 +1,16 @@
 [[mongo.cross.store]]
-= Cross Store support
+= Cross Store Support
 
 Sometimes you need to store data in multiple data stores and these data stores can be of different types. One might be relational while the other a document store. For this use case we have created a separate module in the MongoDB support that handles what we call cross-store support. The current implementation is based on JPA as the driver for the relational database and we allow select fields in the Entities to be stored in a Mongo database. In addition to allowing you to store your data in two stores we also coordinate persistence operations for the non-transactional MongoDB store with the transaction life-cycle for the relational database.
 
 [[mongodb_cross-store-configuration]]
 == Cross Store Configuration
 
-Assuming that you have a working JPA application and would like to add some cross-store persistence for MongoDB. What do you have to add to your configuration?
+Assuming that you have a working JPA application and would like to add some cross-store persistence for MongoDB, what do you have to add to your configuration?
 
-First of all you need to add a dependency on the  module. Using Maven this is done by adding a dependency to your pom:
+First, you need to add a dependency on the cross-store module. If you use Maven, you can add the following dependency to your pom:
 
-.Example Maven pom.xml with spring-data-mongodb-cross-store dependency
+.Example Maven pom.xml with `spring-data-mongodb-cross-store` dependency
 ====
 [source,xml]
 ----
@@ -33,7 +33,7 @@ First of all you need to add a dependency on the  module. Using Maven this is do
 ----
 ====
 
-Once this is done we need to enable AspectJ for the project. The cross-store support is implemented using AspectJ aspects so by enabling compile time AspectJ support the cross-store features will become available to your project. In Maven you would add an additional plugin to the <build> section of the pom:
+Once you have added the dependency, you need to enable AspectJ for the project. The cross-store support is implemented with AspectJ aspects so, if you enable compile-time AspectJ support, the cross-store features become available to your project. In Maven, you would add an additional plugin to the `<build>` section of the pom, as follows:
 
 .Example Maven pom.xml with AspectJ plugin enabled
 ====
@@ -103,7 +103,7 @@ Once this is done we need to enable AspectJ for the project. The cross-store sup
 ----
 ====
 
-Finally, you need to configure your project to use MongoDB and also configure the aspects that are used. The following XML snippet should be added to your application context:
+Finally, you need to configure your project to use MongoDB and also configure which aspects are used. You should add the following XML snippet to your application context:
 
 .Example application context with MongoDB and cross-store aspect support
 ====
@@ -157,7 +157,13 @@ Finally, you need to configure your project to use MongoDB and also configure th
 [[mongodb_cross-store-application]]
 == Writing the Cross Store Application
 
-We are assuming that you have a working JPA application so we will only cover the additional steps needed to persist part of your Entity in your Mongo database. First you need to identify the field you want persisted. It should be a domain class and follow the general rules for the Mongo mapping support covered in previous chapters. The field you want persisted in MongoDB should be annotated using the `@RelatedDocument` annotation. That is really all you need to do!. The cross-store aspects take care of the rest. This includes marking the field with `@Transient` so it won't be persisted using JPA, keeping track of any changes made to the field value and writing them to the database on successful transaction completion, loading the document from MongoDB the first time the value is used in your application. Here is an example of a simple Entity that has a field annotated with `@RelatedDocument`.
+We assume that you have a working JPA application, so we cover only the additional steps needed to persist part of your entity in your Mongo database. To do so, you need to identify the field you want to persist. It should be a domain class and follow the general rules for the Mongo mapping support covered in previous chapters. The field you want to persist in MongoDB should be annotated with the `@RelatedDocument` annotation. That is really all you need to do. The cross-store aspects take care of the rest, including:
+
+* Marking the field with `@Transient` so that it will not be persisted by JPA
+* Keeping track of any changes made to the field value and writing them to the database on successful transaction completion
+* Loading the document from MongoDB the first time the value is used in your application.
+
+The following example shows an entity that has a field annotated with `@RelatedDocument`:
 
 .Example of Entity with @RelatedDocument
 ====
@@ -182,7 +188,9 @@ public class Customer {
 ----
 ====
 
-.Example of domain class to be stored as document
+The following example shows a domain class that is to be stored as a `Document`:
+
+.Example of a domain class to be stored as a Document
 ====
 [source,java]
 ----
@@ -214,7 +222,7 @@ public class SurveyInfo {
 ----
 ====
 
-Once the SurveyInfo has been set on the Customer object above the MongoTemplate that was configured above is used to save the SurveyInfo along with some metadata about the JPA Entity is stored in a MongoDB collection named after the fully qualified name of the JPA Entity class. The following code:
+In the preceding example, once the `SurveyInfo` has been set on the `Customer` object, the `MongoTemplate` that was configured previously is used to save the `SurveyInfo` (along with some metadata about the JPA Entity) in a MongoDB collection named after the fully qualified name of the JPA Entity class. The following code shows how to configure a JPA entity for cross-store persistence with MongoDB:
 
 .Example of code using the JPA Entity configured for cross-store persistence
 ====
@@ -232,7 +240,7 @@ customerRepository.save(customer);
 ----
 ====
 
-Executing the code above results in the following JSON document stored in MongoDB.
+Running the preceding above results in the following JSON document being stored in MongoDB:
 
 .Example of JSON document stored in MongoDB
 ====
