--- a/src/main/asciidoc/reference/introduction.adoc
+++ b/src/main/asciidoc/reference/introduction.adoc
@@ -5,7 +5,6 @@
 
 This part of the reference documentation explains the core functionality offered by Spring Data MongoDB.
 
-<<mongo.core>> introduces the MongoDB module feature set.
+"`<<mongo.core>>`" introduces the MongoDB module feature set.
 
-<<mongo.repositories>> introduces the repository support for MongoDB.
-
+"`<<mongo.repositories>>`" introduces the repository support for MongoDB.
